2025-08-12T00:55:37Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16896005768 # 733
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-12
* notice: last 14d: unq all: 4 12
* notice: prev accum: outdated-unq outdated-all / unq all: 891 1369 / 904 1383
* notice: next accum: outdated-unq outdated-all / unq all: 893 1371 / 904 1383
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-07-28] / []

2025-08-11T01:01:34Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16868516258 # 732
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-11
* notice: last 14d: unq all: 5 13
* notice: prev accum: outdated-unq outdated-all / unq all: 891 1369 / 903 1382
* notice: next accum: outdated-unq outdated-all / unq all: 891 1369 / 904 1383
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-07-28 2025-08-10]

2025-08-10T01:04:02Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16855602872 # 731
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-10
* notice: last 14d: unq all: 5 13
* notice: prev accum: outdated-unq outdated-all / unq all: 890 1368 / 903 1382
* notice: next accum: outdated-unq outdated-all / unq all: 891 1369 / 903 1382
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-07-27] / []

2025-08-09T00:55:29Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16843486486 # 730