@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-08-12T00:55:37Z",
-  "count_outdated" : 1371,
-  "uniques_outdated" : 893,
-  "count" : 1383,
-  "uniques" : 904,
+  "timestamp" : "2025-08-13T00:56:45Z",
+  "count_outdated" : 1372,
+  "uniques_outdated" : 894,
+  "count" : 1384,
+  "uniques" : 905,
   "clones" : [
-    {
-      "timestamp": "2025-07-29T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-07-31T00:00:00Z",
       "count": 1,
@@ -88,6 +79,15 @@
     },
     {
       "timestamp": "2025-08-10T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-08-12T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
